Various updates and fixes

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <td>
               <details>
                 <summary>
-                  <a href="./slides/10-frontend-frameworks.html">Frontend Frameworks</a> et <a href="./slides/11-react-essentials.html">React</a> <span class="inline-note">(<a href="./slides/11-react-essentials.html?print-pdf">pdf</a>)</span>
+                  <a href="./slides/10-frontend-frameworks.html">Frontend Frameworks</a><span class="inline-note">(<a href="./slides/10-frontend-frameworks.html?print-pdf">pdf</a>)</span> et <a href="./slides/11-react-essentials.html">React</a> <span class="inline-note">(<a href="./slides/11-react-essentials.html?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul class="inline-note">
                   <li><a href="https://www.w3schools.com/react/react_useeffect.asp">React `useEffect` Hooks</a></li>
@@ -234,7 +234,7 @@
                 </ul>
             </details>
             </td>
-            <td><a href="#">7 - React</a></td>
+            <td><a href="https://classroom.github.com/a/kn3JLzo9">7 - React</a></td>
           </tr>
           <tr class="tentative">
             <td>12</td>
