--- a/slides/11-react-essentials.html
+++ b/slides/11-react-essentials.html
@@ -1275,7 +1275,7 @@
             <textarea data-template>
                             ## <i class="fa-solid fa-boxes-stacked"></i> Paper (Surfaces)
 
-                            <img style="margin:0; padding:0;margin-right:2rem;width:60%;" src="./images/mui/paper2.png">
+                            <img style="margin:0; padding:0;margin-right:2rem;width:60%;" src="./images/mui/Paper2.png">
 
                             A basic container component for displaying content on an elevated surface.
                             Used to group together UI elements that share common purpose.
