Update for week 13

--- a/index.html
+++ b/index.html
@@ -236,15 +236,16 @@
             </td>
             <td><a href="https://classroom.github.com/a/kn3JLzo9">7 - React</a></td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>12</td>
             <td>14.05</td>
             <td><span class="italic yellow">Test Écrit 2</span></td>
           </tr>
-          <tr class="tentative">
+          <tr >
             <td>13</td>
             <td>21.05</td>
-            <td><a href="./slides/12-polyglot-web.html">Polyglot Web</a> <span class="inline-note">(<a href="./slides/12-polyglot-web.html?print-pdf">pdf</a>)</span> et <a href="./slides/13-typescript.html">Typescript</a> <span class="inline-note">(<a href="./slides/13-typescript.html?print-pdf">pdf</a>)</span></td>
+            <!-- <td><a href="./slides/12-polyglot-web.html">Polyglot Web</a> <span class="inline-note">(<a href="./slides/12-polyglot-web.html?print-pdf">pdf</a>)</span> et <a href="./slides/13-typescript.html">Typescript</a> <span class="inline-note">(<a href="./slides/13-typescript.html?print-pdf">pdf</a>)</span></td> -->
+            <td><a href="./slides/13-typescript.html">Typescript</a> <span class="inline-note">(<a href="./slides/13-typescript.html?print-pdf">pdf</a>)</span></td>
           </tr>
           <tr class="tentative">
             <td>14</td>
@@ -254,7 +255,7 @@
           <tr class="tentative">
             <td>15</td>
             <td>04.06</td>
-            <td>TBD</td>
+            <td>Projets libres</td>
           </tr>
           <tr class="tentative">
             <td>16</td>
