Update for week 13

--- a/slides/13-typescript.html
+++ b/slides/13-typescript.html
@@ -611,12 +611,12 @@
 
               Given two simple types, `Person` and `Address`
               ```ts
-              interface Person {
+              type Person = {
                 name: string;
                 age: number;
               }
 
-              interface Address {
+              type Address = {
                 street: string;
                 city: string;
                 country: string;
