--- a/labos/labo-libre.html
+++ b/labos/labo-libre.html
@@ -39,6 +39,7 @@
 </header>
 <nav id="TOC" role="doc-toc">
 <ul>
+<li><a href="#changelog" id="toc-changelog">Changelog</a></li>
 <li><a href="#description" id="toc-description">Description</a>
 <ul>
 <li><a href="#theme" id="toc-theme">Theme</a></li>
@@ -53,16 +54,14 @@ présentation</a></li>
 </ul></li>
 <li><a href="#évaluation" id="toc-évaluation">Évaluation</a>
 <ul>
-<li><a href="#présentation" id="toc-présentation">Présentation</a></li>
-<li><a href="#code" id="toc-code">Code</a></li>
+<li><a href="#présentation-9pts" id="toc-présentation-9pts">Présentation
+(9pts)</a></li>
+<li><a href="#code-16pts" id="toc-code-16pts">Code (16pts)</a></li>
 </ul></li>
 </ul>
 </nav>
+<h2 id="changelog">Changelog</h2>
 <table>
-<colgroup>
-<col style="width: 9%" />
-<col style="width: 90%" />
-</colgroup>
 <thead>
 <tr>
 <th>Date</th>
@@ -73,6 +72,10 @@ présentation</a></li>
 <tr>
 <td>08.05</td>
 <td>Réorganisation et remaniement du contenu pour plus de clarté</td>
+</tr>
+<tr>
+<td>28.05</td>
+<td>Mise à jour du barème pour les labos libres</td>
 </tr>
 </tbody>
 </table>
@@ -144,19 +147,19 @@ présenter.</p>
 <tbody>
 <tr>
 <td>1</td>
-<td>7 minutes</td>
+<td>~ 7 minutes</td>
 </tr>
 <tr>
 <td>2</td>
-<td>10 minutes</td>
+<td>~ 10 minutes</td>
 </tr>
 <tr>
 <td>3</td>
-<td>12 minutes</td>
+<td>~ 12 minutes</td>
 </tr>
 <tr>
 <td>4</td>
-<td>15 minutes</td>
+<td>~ 15 minutes</td>
 </tr>
 </tbody>
 </table>
@@ -171,41 +174,39 @@ Critères de notation:
 - 1 point - Le critère est partiellement respecté
 - 2 points - Le critère est respecté
 -->
-<h2 id="présentation">Présentation</h2>
+<h2 id="présentation-9pts">Présentation (9pts)</h2>
 <ul>
-<li>Répartition du temps de parole (2pts) : il est important que chaque
-personne participe de manière égale.</li>
-<li>Respect du temps imparti (2pts) : vous avez un temps de parole
-défini, et il est important que vous le respectiez.</li>
-<li>Retours sur les technologies (2pts) : vous devez présenter les
-librairies ou APIs que vous avez utilisées, et expliquer pourquoi vous
-les avez choisies, ce que vous avez appris, les avantages et
-inconvénients de chaque technologie. Apprenez-nous des choses !</li>
-<li>Démonstration (2pts) : vous devez faire une démonstration
-fonctionnelle de votre solution.</li>
-<li>Questions (2pts) : votre équipe doit être prête à répondre aux
-questions.</li>
+<li><p>Répartition du temps de parole (1pt): <br/> il est important que
+chaque personne participe de manière égale.</p></li>
+<li><p>Respect du temps imparti (1pt) : <br/> vous avez un temps de
+parole défini, et il est important que vous le respectiez.</p></li>
+<li><p>Retour sur les technologies (3pts): <br/> vous devez présenter
+les librairies ou APIs que vous avez utilisées, et expliquer pourquoi
+vous les avez choisies, ce que vous avez appris, les avantages et
+inconvénients de chaque technologie. Apprenez-nous des choses !</p></li>
+<li><p>Demo (2pts): <br /> vous devez faire une démonstration
+fonctionnelle de votre solution.</p></li>
+<li><p>Réponse aux questions (2pts): <br /> votre équipe doit être prête
+à répondre aux questions.</p></li>
 </ul>
-<h2 id="code">Code</h2>
+<h2 id="code-16pts">Code (16pts)</h2>
 <ul>
-<li>Taux de participation (2pts) : chaque membre de l’équipe doit
-participer de manière égale.</li>
-<li>Respect des délais (2pts) : vous devez rendre votre projet à temps,
-c’est à dire avant le début de la première présentation de votre
-classe.</li>
-<li>Documentation et prise en main (2pts) : votre projet doit être
-facile à prendre en main pour une personne qui n’a pas travaillé dessus
-et doit fonctionner sur une autre machine que celle de la démonstration.
-Vous devez donc fournir un <code>README.md</code> qui explique comment
-installer et lancer votre projet.</li>
-<li>Le projet fonctionne (2pts) : votre projet est fonctionnel et ne
-contient pas de bugs majeurs.</li>
-<li>Utilisation des bonnes pratiques (2pts) : qualité du code et bonnes
-pratiques recommandées par les technologies que vous avez
-utilisées.</li>
-<li>Cahier des charges et charge de travail (2pts) : vous devez
-respecter votre cahier des charges, et avoir réparti le travail sur tout
-le temps imparti (et non pas juste la veille).</li>
+<li><p>Respect des délais et répartition du travail sur la durée (2pts):
+<br /> Vous devez rendre votre projet à temps, et avoir réparti le
+travail sur tout le temps imparti.</p></li>
+<li><p>Documentation et prise en main (3pts): <br /> Votre projet doit
+être facile à prendre en main pour une personne qui n’a pas travaillé
+dessus et doit fonctionner sur une autre machine que celle de la
+démonstration. Vous devez donc indiquer dans le <code>README.md</code>
+(ou autre fichier) comment installer et lancer votre projet.</p></li>
+<li><p>Le projet fonctionne (3pts): <br /> Votre projet est fonctionnel
+et ne contient pas de bugs majeurs.</p></li>
+<li><p>Bonnes pratiques &amp; utilisation des technologies (3pts):
+<br /> Qualité du code et bonnes pratiques recommandées par les
+technologies que vous avez utilisées ainsi que le bon usage des
+technologies.</p></li>
+<li><p>Respect du cahier des charges (5pts): <br /> Vous devez respecter
+votre cahier des charges.</p></li>
 </ul>
 <!-- 
 ## Ordre de passage
