--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </thead>
         </thead>
         <tbody>
+        <!-- <tr class="tentative"> -->
           <tr>
             <td class="inline-note">1</td>
             <td class="inline-note">19.02</td>
@@ -247,12 +248,12 @@
             <!-- <td><a href="./slides/12-polyglot-web.html">Polyglot Web</a> <span class="inline-note">(<a href="./slides/12-polyglot-web.html?print-pdf">pdf</a>)</span> et <a href="./slides/13-typescript.html">Typescript</a> <span class="inline-note">(<a href="./slides/13-typescript.html?print-pdf">pdf</a>)</span></td> -->
             <td><a href="./slides/13-typescript.html">Typescript</a> <span class="inline-note">(<a href="./slides/13-typescript.html?print-pdf">pdf</a>)</span></td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>14</td>
             <td>28.05</td>
             <td>Projets libres</td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>15</td>
             <td>04.06</td>
             <td>Projets libres</td>
