Updates to labo libres

--- a/labos/labo-libre.html
+++ b/labos/labo-libre.html
@@ -77,6 +77,10 @@ présentation</a></li>
 <td>28.05</td>
 <td>Mise à jour du barème pour les labos libres</td>
 </tr>
+<tr>
+<td>10.06</td>
+<td>Mise à jour des temps de présentation</td>
+</tr>
 </tbody>
 </table>
 <h1 id="description">Description</h1>
@@ -147,19 +151,19 @@ présenter.</p>
 <tbody>
 <tr>
 <td>1</td>
-<td>~ 7 minutes</td>
+<td>10 minutes (~2 min pour les questions)</td>
 </tr>
 <tr>
 <td>2</td>
-<td>~ 10 minutes</td>
+<td>15 minutes (~4 min pour les questions)</td>
 </tr>
 <tr>
 <td>3</td>
-<td>~ 12 minutes</td>
+<td>20 minutes (~5 min pour les questions)</td>
 </tr>
 <tr>
 <td>4</td>
-<td>~ 15 minutes</td>
+<td>25 minutes (~5 min pour les questions)</td>
 </tr>
 </tbody>
 </table>
@@ -211,11 +215,12 @@ votre cahier des charges.</p></li>
 <!-- 
 ## Ordre de passage
 
-L'ordre de passage a été généré aléatoirement. Il est donné ici, avec les
-horaires que nous souhaitons respecter.
+L'ordre de passage est donné ci-dessous, avec les horaires que nous souhaitons respecter.
 
 | Équipe                   | Heure de passage |
 | ------------------------ | ---------------- |
+| Équipe 1 (1 personne)    | 09:00            |
+!
 
 -->
 </main>
