Updates to labo libres

--- a/labos/labo-libre.html
+++ b/labos/labo-libre.html
@@ -58,6 +58,9 @@ présentation</a></li>
 (9pts)</a></li>
 <li><a href="#code-16pts" id="toc-code-16pts">Code (16pts)</a></li>
 </ul></li>
+<li><a href="#répartition-du-travail-entre-membres"
+id="toc-répartition-du-travail-entre-membres">Répartition du travail
+entre membres</a></li>
 </ul>
 </nav>
 <h2 id="changelog">Changelog</h2>
@@ -151,24 +154,22 @@ présenter.</p>
 <tbody>
 <tr>
 <td>1</td>
-<td>10 minutes (~2 min pour les questions)</td>
+<td>7-10 minutes + ~2 min pour les questions</td>
 </tr>
 <tr>
 <td>2</td>
-<td>15 minutes (~4 min pour les questions)</td>
+<td>11-13 minutes + ~3 min pour les questions</td>
 </tr>
 <tr>
 <td>3</td>
-<td>20 minutes (~5 min pour les questions)</td>
+<td>13-15 minutes + ~4 min pour les questions</td>
 </tr>
 <tr>
 <td>4</td>
-<td>25 minutes (~5 min pour les questions)</td>
+<td>16-19 minutes + ~5 min pour les questions</td>
 </tr>
 </tbody>
 </table>
-<p><em>Ces durées sont susceptibles de changer légèrement en fonction du
-nombre exact de groupes et leur taille.</em></p>
 <h1 id="évaluation">Évaluation</h1>
 <p>Vous serez évalués sur les critères suivants.</p>
 <!--
@@ -212,6 +213,15 @@ technologies.</p></li>
 <li><p>Respect du cahier des charges (5pts): <br /> Vous devez respecter
 votre cahier des charges.</p></li>
 </ul>
+<h1 id="répartition-du-travail-entre-membres">Répartition du travail
+entre membres</h1>
+<p>En cas de répartition inégale du travail entre les membres de
+l’équipe, une pénalité pour les membres qui ont participé sensiblement
+moins que les autres pourrait être appliquée.</p>
+<p>Nous nous baserons sur les commits de l’historique Git pour nous
+faire une idée de la répartition. Si vous avez travaillé en “Peer
+Programming”, ou en cas de doute, vous pouvez aussi spécifier la
+contribution de chaque membre dans le README.md de votre projet.</p>
 <!-- 
 ## Ordre de passage
 
