Updates to labo libres

--- a/labos/labo-libre.html
+++ b/labos/labo-libre.html
@@ -140,15 +140,15 @@ discuter de l’avancement de votre projet.</p>
 <h1 id="présentation-finale">Présentation finale</h1>
 <h2 id="durée-de-votre-présentation">Durée de votre présentation</h2>
 <p>Vos présentations ne devront <strong>strictement</strong> pas
-dépasser les durées suivantes, en fonction de la taille de votre équipe.
-Ce choix est justifié par le fait qu’une plus grande équipe aura
-travaillé sur plus de choses et aura donc plus de contenu à
+dépasser les durées maximales suivantes, en fonction de la taille de
+votre équipe. Ce choix est justifié par le fait qu’une plus grande
+équipe aura travaillé sur plus de choses et aura donc plus de contenu à
 présenter.</p>
 <table>
 <thead>
 <tr>
 <th>Taille de l’équipe</th>
-<th>Durée de la présentation</th>
+<th>Durée de la présentation (min-max)</th>
 </tr>
 </thead>
 <tbody>
